@@ -5,6 +5,9 @@ Version 0.7
 -----------
 (codename to be selected, released Feb XX, 2007)
 
+- Made it possible to just drop style modules into the `styles` subpackage
+  of the Pygments installation.
+
 - Added a "state" keyword argument to the `using` helper.
 
 - Added a `commandprefix` option to the `LatexFormatter` which allows to
